--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Jubilee Austen | Portfolio</title>
+    <title>Amy Ash | Portfolio</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
@@ -12,18 +12,20 @@
       <header>
         <div class="full-width">
           <div class="half-width">
-            <h1>Jubilee Austen</h1>
+            <h1>Amy Ash</h1>
           </div>
            <div class="half-width">
             <nav>
                 <ul>
                   <li><a href="#about">About</a></li>
-                  <li><a href="#work">Work</a></li>
+                  <li><a href="#offerings">Offerings</a></li>
+                  <li><a href="#portfolio">Portfolio</a></li>
                   <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
            </div>
-          <h2><span>Hi,</span> I'm a developer that loves clean &amp; elegant code.</h2>
+          <h2><span>Hello!</span> I design simple, elegant, and affordable websites. Check out my portfolio and let’s connect.
+</h2>
         </div>
       </header>
 
@@ -32,29 +34,43 @@
             <div class="full-width">
               <h2>A little bit about me.</h2>
               <div class="half-width">
-                <p>I've made my home base in Providence, Rhode Island, with my small growing family. My journey into tech started with a degree in journalism. As I started sharing my writing online, I was fascinated with how easily I could get my voice out there. I was hooked and wanted to learn how to build my own site to fit my own specific needs.</p>
+                <p>I'm from Longmont, Colorado. My resume is diverse. I have owned a consignment clothing store, served as the COO of a jewelry-design company, and I also happen to be a Hypnotherapist and EFT Practitioner. Through the process of designing a website and other marketing collateral for my business, I discovered that I had a knack for design and I enjoyed it.
+</p>
               </div>
             <div class="half-width">
-              <p>That curiosity then opened a door that could never be shut. When I learned how to build my first website, I realized I found something that gave me the freedom & versatility I was looking for in my work. Now I've made a full switch to front-end development, where I can use my organization skills and eye for detail to write clean, elegant code.</p>
+              <p>I took the plunge and learned how to officially code and design websites. I now have the technical skills plus the business management background, to create a high-quality, effective website presence for you without breaking the bank. After all, we small business owners don’t have the funds to hire big teams with big budgets, but we still need a nice website. Check out my portfolio below to see my work and my offerings.</p>
             </div>
           </div>
        </section>
 
-        <section id="work">
+       <section id="offerings">
+          <div class="full-width">
+            <div class="third-width">
+               <!–-FIRST PORTFOLIO IMAGE AND DESCRIPTION HERE-->
+            </div>
+            <div class="third-width">
+               <!–-SECOND PORTFOLIO IMAGE AND DESCRIPTION HERE-->
+            </div>
+            <div class="third-width">
+               <!–-THIRD PORTFOLIO IMAGE AND DESCRIPTION HERE-->
+            </div>
+
+        <section id="portfolio">
           <div class="full-width">
             <div class="third-width">
               <img src="img/html-icon.png" alt="HTML icon"/>
-              <h3>Hand-Coded HTML</h3>
-              <p>My focus is writing clean, well-formatted, semantic HTML5 by hand to make sure that the content is easy to read, easy to collaborate, trouble-shoot and accessible.</p>            </div>
+              <h3>Simple and User-Friendly Design</h3>
+              <p>My designs are clean, clear, and effective at sharing your message and offerings with the end-user in mind. </p>
+            </div>
             <div class="third-width">
               <img src="img/css-icon.png" alt="CSS icon"/>
-              <h3>Well-Organized CSS</h3>
-              <p>I pride myself on writing CSS that is easy to read and build on. I focus on keeping my CSS lean and fast to load, and I make it a habit to stay up to date on current best practices.</p>
+              <h3>Easy-To-Work-With</h3>
+              <p> I am very detailed oriented and make the entire project easy for you by clearly communicating all in an organized, timely, and proactive manner.</p>
             </div>
             <div class="third-width">
               <img src="img/pencil-icon.png" alt="Pencil icon"/>
-              <h3>Ease Converting Designs into Code</h3>
-              <p>You can trust me to take a designer's PSD and quickly & accurately convert it into a webpage that is pixel-perfect match.</p>
+              <h3>High-Quality</h3>
+              <p>Every project will be made with the meet your highest expectations, use best-practices for design + coding, and be delivered on time.</p>
             </div>
           </div>
        </section>
@@ -65,8 +81,8 @@
           </div>
           <div class="half-width">
             <h2>Like what you see?</h2>
-            <h3 id="email-header">Let's meet for a cup of coffee.</h3>
-            <a href="mailto:hi@jubileeausten.com"><img src="img/envelope.png" id="envelope" alt="envelope icon"/>hi [@] jubileeausten.com</a>
+            <h3 id="email-header">Let's talk.</h3>
+            <a href="mailto:hello@amyashdesigns.com"><img src="img/envelope.png" id="envelope" alt="envelope icon"/>hello [@] amyashdesigns.com</a>
             <h3 id="socialmedia-header">Or, find me on the interwebs</h3>
             <div id="contact-info">
               <ul>
